deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  frontend
  namespace: plone-project
  labels:
    app:  frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  frontend
    spec:
      containers:
      - name:  frontend
        image: plone/plone-frontend
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "450m"
        ports:
        - containerPort: 3000 
          name:  frontend
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      imagePullSecrets:
      - name: sishub
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/America/Araguaina
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  backend
  namespace: plone-project
  labels:
    app:  backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2 
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  backend
    spec:
      containers:
      - name:  backend
        image: plone/plone-backend
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "900m"
        ports:
        - containerPort: 8080 
          name:  backend
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      imagePullSecrets:
      - name: sishub
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/America/Araguaina
      restartPolicy: Always
---
