services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: plone-project
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - name: frontend
    protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: plone-project
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - name: backend
    protocol: TCP
    port: 8080
    targetPort: 8080
---
